src/objects/Apttus_Config2__Footnote__c.object
<CustomObject>
    <description>Represents a single footnote in a document</description>
    <fields>
        <fullName>Apttus_Config2__Body__c</fullName>
        <description>The body of the footnote</description>
        <inlineHelpText>The body of the footnote</inlineHelpText>
        <label>Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Text__c</fullName>
        <description>The footnote text. This is deprecated. Please use the Body to store the content.</description>
        <inlineHelpText>The footnote text. This is deprecated. Please use the Body to store the content.</inlineHelpText>
        <label>Text (Deprecated)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The footnote type</description>
        <inlineHelpText>The footnote type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Footnote</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Footnote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footnote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>